--- a/css/styles-index.css
+++ b/css/styles-index.css
@@ -12487,6 +12487,7 @@ fieldset:disabled .btn {
 * {
   margin: 0;
   padding: 0;
+  list-style: none;
 }
 
 .navbar-brand {
@@ -12504,6 +12505,23 @@ fieldset:disabled .btn {
 .jumbotron span {
   font-size: 3rem;
   font-weight: bold;
+}
+
+.breadcrumb {
+  padding: 1rem;
+  cursor: pointer;
+  background-color: #e4e1e1;
+  margin-top: 1.5rem;
+  border-radius: 0.3rem;
+}
+
+.breadcrumb-item a {
+  text-decoration: none;
+  color: #837e7e;
+}
+
+.breadcrumb-item a:hover {
+  color: #000;
 }
 
 .box-content {
@@ -12557,5 +12575,75 @@ fieldset:disabled .btn {
           justify-content: space-between;
   padding: 1rem;
   max-width: 300px;
+}
+
+.footer {
+  background-color: #ffe605;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin-top: 2rem;
+  padding: 2rem 1.5rem;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.foot__container {
+  min-width: 350px;
+  padding-top: 1.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.foot__container p {
+  line-height: 1rem;
+}
+
+.foot__container-item a {
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.foot__menu-item {
+  font-weight: bold;
+}
+
+.foot__menu-item a {
+  text-decoration: none;
+}
+
+.foot__text {
+  font-weight: bold;
+  font-size: 2rem;
+}
+
+.container__form {
+  width: 90%;
+  margin: 0 auto;
+  background-color: #e4e1e1;
+  border-radius: 0.5rem;
+  padding: 2rem 2.5rem;
+}
+
+.form__box {
+  padding: 1rem;
+}
+
+th span {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
 }
 /*# sourceMappingURL=styles-index.css.map */
