--- a/sass/styles-index.scss
+++ b/sass/styles-index.scss
@@ -26,7 +26,7 @@
 .breadcrumb{
     padding: 1rem;
     cursor: pointer;
-    background-color: rgb(228, 225, 225);
+    background-color: #d1e7dd;
     margin-top: 1.5rem;
     border-radius: 0.3rem;
 }
@@ -56,6 +56,10 @@
 
 .text__box{
     max-width: 90%;
+}
+
+.text{
+    padding: 0.5rem 0;
 }
 
 .box-card{
