--- a/css/styles-index.css
+++ b/css/styles-index.css
@@ -12650,4 +12650,9 @@ th span {
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
 }
+
+.modal-btn {
+  margin-bottom: 0.6rem;
+  width: 40%;
+}
 /*# sourceMappingURL=styles-index.css.map */
